feat(api): Add GET /items/:itemId
